# Logotherapia-App

./: .gitignore  README.md  db.sqlite3  pyproject.toml
apps/users/: admin.py  forms.py  managers.py  middleware.py  models.py  password_change.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
frontend/static_src/: package-lock.json
templates/: _base.html  home.html
templates/app/users/: login.html  password_change.html  password_change_done.html  password_reset.html
