[project]
name = "logotherapia-app"
version = "0.1.0"
description = ""
authors = [
    {name = "kostasvit",email = "kostasvit@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "django (==5.1.6)",
    "django-tailwind[reload] (>=3.8.0,<4.0.0)",
    "django-extensions (>=3.2.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
